# sf4_updater

./: .gitignore  Cargo.toml  README.md  config.yml
src/: conf.rs  dealiaser.rs  f_find.rs  main.rs
src/php/: class_extractor.rs  extract_php.rs  mod.rs  php_parser.rs  remove_get.rs  resolve_namespace.rs  rm_get.rs  rm_get_repository.rs
src/php/transformers/: dealias_get_repository.rs  dealias_paths.rs  mod.rs  rm_get.rs
src/php/transformers/rm_get/: dealiaser.rs  mod.rs  rm_get.rs
src/php/transformers/update_paths/: dealias_path.rs  file_mover.rs  mod.rs  update_controller_path.rs  update_view_path.rs
