[package]
name = "sf4_updater"
version = "0.2.0"
authors = ["Arthur Woimbée <arthur.woimbee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
yaml-rust = "0.4"
regex = "1.3.1"
lazy_static = "1.4.0"
chrono = "0.4"
colored = "1.8.0"
futures = "0.3.1"
